# learningfromdata-quarto

./: .gitignore  .pre-commit-config.yaml  README.md  _quarto-book.yml  _quarto.yml  book.css  custom.scss  index.qmd  pyproject.toml
.github/workflows/: deploy-book.yml  notebooks.yml
docs/: curriculum_roadmap.md
notebooks/: ENM_3800_Learning_from_Data.docx
notebooks/Notebook_1/: Notebook_1_Learning_from_Data.ipynb  Notebook_1_Learning_from_Data.py  Notebook_1a_Overview_and_Data_Representation.ipynb  Notebook_1a_Overview_and_Data_Representation.py  Notebook_1b_Noise_and_Modeling_Data.ipynb  Notebook_1b_Noise_and_Modeling_Data.py
notebooks/Notebook_2/: Notebook_2a_Building_a_Model.ipynb  Notebook_2a_Building_a_Model.py  Notebook_2b_Model_Selection.ipynb  Notebook_2b_Model_Selection.py
notebooks/Notebook_3/: Notebook_3a_Probability.ipynb  Notebook_3a_Probability.py  Notebook_3a_Probability_and_Covariance.ipynb  Notebook_3a_Probability_and_Covariance.py  Notebook_3b_Hypothesis_Testing.ipynb  Notebook_3b_Hypothesis_Testing.py  Notebook_3b_Statistics_1.ipynb  Notebook_3b_Statistics_1.py  Notebook_3c_Bootstrapping_and_Permutation_Tests.ipynb  Notebook_3c_Bootstrapping_and_Permutation_Tests.py  Notebook_3c_Statistics_2.ipynb  Notebook_3c_Statistics_2.py
notebooks/Notebook_4/: Notebook_4a_Regression.ipynb  Notebook_4a_Regression.py  Notebook_4b_Classification.py  Notebook_4c_PyTorch_Model.ipynb  Notebook_4c_PyTorch_Model.py
scripts/: add_exercise_badges.py  execute_notebooks.sh  fold_plot_cells.py  render_book.sh  render_slides.sh  strip_tqdm_output.py
(+4 files in other folders)
